manifests/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: oidcapp
spec: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: authorization-server
  name: authorization-server
  namespace: oidcapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: authorization-server
    spec:
      containers:
      - image: oidcapp-auth-server:0.0.1-SNAPSHOT
        name: oidcapp-auth-server

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: authorization-server
  name: authorization-server
  namespace: oidcapp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9080
  selector:
    app: authorization-server
  type: ClusterIP
